# calltraces

./: .gitattributes  .gitignore  .pre-commit-config.yaml  MANIFEST.in  README.md  azure-pipelines.yml  environment.yml  pyproject.toml  pytest.ini  setup.cfg  setup.py
.azure-pipelines/: azure-pipelines.yml  package-check.yml
.github/actions/run-python-tests/: action.yaml  actions.yaml
.github/workflows/: initiate-azure-pipeline  python-deploy.yml  python-package.yml  test-deploy.yml
calltraces/: ReadMe.md  __init__.py  _version.py  classtrace.py  functiontrace.py  linetrace.py  traceSettings.py
pipelines/: azure-pipelines.yml
requirements/: requirements.build.txt  requirements.dev.txt  requirements.tests.txt
tests/: __init__.py  coverage.ini  pytest.ini  test_classTrace.py  test_functionTrace.py  test_lineTrace.py
