[build-system]
requires = [
    "setuptools>=62.6.0",
    "requests>=2.27.0",
    "wheel"
]

build-backend = "setuptools.build_meta"
[tool.black]
target-version = ['py38', 'py39']
force-exclude = '''
(
    asv_bench/env
  | \.egg
  | \.git
  | \.hg
  | \.mypy_cache
  | \.nox
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)
'''
