[metadata]
name = calltraces
version = 0.0.1
author = Righteous AI Inc.
author_email = admin@righteous.ai
description = A small package for tracing function calls
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/righteouslabs/calltraces
project_urls =
    Bug Tracker = https://github.com/righteouslabs/calltraces/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = calltraces
packages = find:
python_requires = >=3.9

[options.packages.find]
where = calltraces
