[metadata]
name = calltraces
author = Righteous AI Inc.
author_email = admin@righteous.ai
description = A small package for tracing function calls
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/righteouslabs/calltraces
project_urls =
    Bug Tracker = https://github.com/righteouslabs/calltraces/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = calltraces
packages = find:
python_requires = >=3.9

[options.packages.find]
where = calltraces

[flake8]
max-complexity=10
# Recommend matching the black line length (default 88),
# rather than using the flake8 default of 79:
max-line-length = 88
extend-ignore =
    # See https://github.com/PyCQA/pycodestyle/issues/373
    E203,

# See the docstring in versioneer.py for instructions. Note that you must
# re-run 'versioneer.py setup' after changing this section, and commit the
# resulting files.
[versioneer]
VCS = git
style = git-describe
versionfile_source = calltraces/_version.py
versionfile_build = calltraces/_version.py
tag_prefix = v
parentdir_prefix = calltraces-
