[metadata]
name = calltraces
author = Righteous AI Inc.
author_email = admin@righteous.ai
description = A small package for tracing function calls
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/righteouslabs/calltraces
keywords = calltraces, call, traces, stack, frames
project_urls =
    Source Code = https://github.com/righteouslabs/calltraces
    Bug Tracker = https://github.com/righteouslabs/calltraces/issues
classifiers =
    # How mature is this project? Common values are
    #   3 - Alpha
    #   4 - Beta
    #   5 - Production/Stable
    Development Status :: 5 - Stable",
    # Indicate who your project is intended for
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent",
    # Specify the Python versions you support here. In particular, ensure
    # that you indicate you support Python 3. These classifiers are *not*
    # checked by 'pip install'. See instead 'python_requires' below.
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3 :: Only

[options]
packages = find:
python_requires = >=3.9
install_requires =
    colorama>=0.4.4
include_package_data = True
zip_safe = True

[options.packages.find]
where = .
exclude =
    tests,

[flake8]
max-complexity=10
# Recommend matching the black line length (default 88),
# rather than using the flake8 default of 79:
max-line-length = 88
extend-ignore =
    # See https://github.com/PyCQA/pycodestyle/issues/373
    E203,

# See the docstring in versioneer.py for instructions. Note that you must
# re-run 'versioneer.py setup' after changing this section, and commit the
# resulting files.
[versioneer]
VCS = git
style = git-describe
versionfile_source = calltraces/_version.py
versionfile_build = calltraces/_version.py
tag_prefix = v
parentdir_prefix = calltraces-
